objects/EUR_ISP_AccountVendor__c.object
<CustomObject>
    <description>In use for iSpend</description>
    <fields>
        <fullName>EUR_ISP_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>AccountVendors (EU)</relationshipLabel>
        <relationshipName>AccountVendors_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_External_ID_Account_ERP_ID_Vendo__c</fullName>
        <inlineHelpText>You are not allowed to create an AccoountVendor record with the same Account SF ID and Vendor External ID as already exist.</inlineHelpText>
        <label>Account SF ID &amp; ERP ID Vendor</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_ISP_Vendor__c</fullName>
        <label>Vendor</label>
        <referenceTo>EUR_ISP_Vendor__c</referenceTo>
        <relationshipLabel>AccountVendors (EU)</relationshipLabel>
        <relationshipName>AccountVendors_EU</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>AccountVendor (EU)</label>
    <nameField>
        <displayFormat>AV-{00000000}</displayFormat>
        <label>AccountVendor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountVendors (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>